--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>jenkins-conf</groupId>
     <artifactId>jenkins-conf</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
     <properties>
         <java.version>9</java.version>
     </properties>
