--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>jenkins-conf</groupId>
     <artifactId>jenkins-conf</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-RELEASE</version>
     <packaging>jar</packaging>
     <properties>
         <java.version>9</java.version>
